added intro section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -21,29 +22,15 @@
 </header>
 
 <!--ORE-->
-<div>
-    <h1>We Are Canada, eh?</h1>
+<div class="intro">
+    <h1>We Are <span style="color: #FF0000">C</span>anadian, eh?</h1>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+    <div style="height: 100px"></div>
+    <img src="./img/intro.jpg" alt="Canada Image">
 </div>
-
-<!--<div class="primary">-->
-<!--    <div>-->
-<!--        <h1>OUR STORY</h1>-->
-<!--        <img src="" alt="">-->
-<!--    </div>-->
-<!--    <div>-->
-<!--        <h2>The Company</h2>-->
-<!--        <p>Created in 2016 as an answer to the demand from cafes and restaurants for a high-quality tea source, Red Rooster Coffee Roaster developed Swallowtail Tea. Nestled in the tiny hamlet of Floyd, Virginia, Swallowtail has met that need by working with high-end tea importers and local herb farmers. Swallowtail is built on the same foundation that made Red Rooster successful - great quality, robust customer education, and great customer service. </p>-->
-<!--    </div>-->
-<!--    <div>-->
-<!--        <h2>Floyd, VA</h2>-->
-<!--        <p>Known for its abundance of bucolic vistas, gentle rolling hills, clean water, rich music heritage, and eclectic counter culture, Floyd (pop. 432) is among the most unique small towns in the country. Without a major industry, railroad, college, or interstate to help its economy, Floyd's residents have created small thriving enterprises to sustain the vitality of this sweet place we call home.  Learn more about Floyd VA here.</p>-->
-<!--    </div>-->
-<!--</div>-->
 
 <footer>
     <span>Copyright</span>
 </footer>
-
 </body>
 </html>
