--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Canad days</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
@@ -11,14 +11,20 @@
 
 <!--Takuya-->
 <header >
-    <img src="#" alt="">
+    <a href="#"><img class="homeimg" src="./img/header-img.jpg" alt="header image"></a>
     <nav>
-        <ul>
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
-        </ul>
-    </nav>
+        <div class="headerleft">
+            <a href="#" class="menu"><li>HOME</li></a>
+            <a href="#" class="menu"><li>ABOUT</li></a>
+            <a href="#" class="menu"><li>CONTACT</li></a>
+        </div>
+        <div class="headerleft">
+            <a href="#" class="menu"><li>MERCH</li></a>
+            <a href="#" class="menu"><li>MAIL</li></a>
+            <a href="#" class="menu"><li>Q&A</li></a>
+        </div>
+    </nav>  
+
 </header>
 
 <!--ORE-->
