--- a/index.html
+++ b/index.html
@@ -36,39 +36,41 @@
 </div>
 
 <!-- takuya 2nd part -->
-<div class="ourvalues">
-     <h1>Our Values</h1>
-</div>
 <div class="split2">
     <div>
-        <div class="split4">
-            <div>
-                <p class="number">01</p>
-                <h3>Unparalled Quality</h3>
-                <p>At Swallowtail, quality is not just a word, it is the cornerstone of our business. Every step, from importing to tasting to blending and packaging is all done with the intent of providing our customer with the highest quality product. We inspect and cup every batch of tea and herbs we receive at our lab in Floyd and taste them religiously throughout their time in our care.</p>
+        <h1>Our Values</h1>
+    </div>    
+    <div class="flex">       
+        <div class="left">
+            <div class="split4">
+                <div>
+                    <p class="number">01</p>
+                    <h3>Unparalled Quality</h3>
+                    <p>At Swallowtail, quality is not just a word, it is the cornerstone of our business. Every step, from importing to tasting to blending and packaging is all done with the intent of providing our customer with the highest quality product. We inspect and cup every batch of tea and herbs we receive at our lab in Floyd and taste them religiously throughout their time in our care.</p>
+                </div>
+                <div>
+                    <p class="number">02</p>
+                    <h3>Transparent Sourcing</h3>
+                    <p>Knowing where our tea comes from is just as important as knowing where our food comes from. Our importer takes multiple origin trips a year, sending back pictures and information about the estates' farming practices, labor values, and production standards. We work hard to source a clean, ecologically responsible, and ethically produced product. </p>
+                </div>
             </div>
-            <div>
-                <p class="number">02</p>
-                <h3>Transparent Sourcing</h3>
-                <p>Knowing where our tea comes from is just as important as knowing where our food comes from. Our importer takes multiple origin trips a year, sending back pictures and information about the estates' farming practices, labor values, and production standards. We work hard to source a clean, ecologically responsible, and ethically produced product. </p>
+            <div class="split4">
+                <div>
+                    <p class="number">03</p>
+                    <h3>Local Herbs</h3>
+                    <p>Swallowtail Tea's philosophy is to provide the finest tea and herbs available. Though the Camilia sinensis plant does not grow well in our region, there are many herbs that we can source locally. From ginger to turmeric to anise and mint, our tea blends are designed to be both delicious and good for your body. </p>
+                </div>
+                <div>
+                    <p class="number">04</p>
+                    <h3>Sustainablity</h3>
+                    <p>At Swallowtail, we strive to achieve all forms of sustainability. Our ethical and transparent sourcing, honesty, commitment to quality, fair pricing, packaging, and growth all play into our sustainable values. We have built our facility using green building technology and upcycled materials. As we grow, we will strive to stay committed to these standards and more.</p>
+                </div>
             </div>
         </div>
-        <div class="split4">
-            <div>
-                <p class="number">03</p>
-                <h3>Local Herbs</h3>
-                <p>Swallowtail Tea's philosophy is to provide the finest tea and herbs available. Though the Camilia sinensis plant does not grow well in our region, there are many herbs that we can source locally. From ginger to turmeric to anise and mint, our tea blends are designed to be both delicious and good for your body. </p>
-            </div>
-            <div>
-                <p class="number">04</p>
-                <h3>Sustainablity</h3>
-                <p>At Swallowtail, we strive to achieve all forms of sustainability. Our ethical and transparent sourcing, honesty, commitment to quality, fair pricing, packaging, and growth all play into our sustainable values. We have built our facility using green building technology and upcycled materials. As we grow, we will strive to stay committed to these standards and more.</p>
-            </div>
-        </div>
-    </div>
 
-    <div class="landscapeimg">
-        <img src="./img/landscape.jpg" alt="landscape image">
+        <div class="landscapeimg right">
+            <img src="./img/landscape.jpg" alt="landscape image">
+        </div>
     </div>
 </div>
 
