added mail form and footer

--- a/index.html
+++ b/index.html
@@ -74,8 +74,59 @@
     </div>
 </div>
 
-<footer>
-    <span>Copyright</span>
+
+<!-- takuya 3rd part -->
+
+<div class="split">
+    <div class="outroleft">
+        <div class="outrocontext">
+            <h3>Swallowtail Tea</h3>
+            <p>Swallowtail Tea is a Virginia-based tea company sourcing only the highest quality tea, herbs, and spices from around the world.</p>
+        </div>
+    </div>
+    <div class="outroright">
+        <div class="outrocontext">
+            <h3>Sign up and get 10% off your first purchase.</h3>
+            <div class="mail">
+                <input type="text" placeholder="Your email address..." name="email">
+                <input type="submit" value="JOIN" class="button">
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="footer">
+    <div class="top">
+        <h3>SHOP</h3>
+        <h3>COMPANY</h3>
+        <h3>ACCOUNT</h3>
+        <h3>LEGAL</h3>
+    </div>
+    <hr>
+    <div class="footermenu">
+        <div class="shop">
+            <a href="#"><li>All</li></a>
+            <a href="#"><li>Teas</li></a>
+            <a href="#"><li>Merch</li></a>
+            <a href="#"><li>Brew Wares</li></a>
+        </div>
+        <div class="company">
+            <a href="#"><li>Wholesale</li></a>
+            <a href="#"><li>About Us</li></a>
+            <a href="#"><li>Contact Us</li></a>
+            <a href="#"><li>FAQs</li></a>
+        </div>
+        <div class="account">
+            <a href="#"><li>My Orders</li></a>
+            <a href="#"><li>Sign Up</li></a>
+        </div>
+        <div class="legal">
+            <a href="#"><li>Term & Conditions</li></a>
+            <a href="#"><li>Privacy Policy</li></a>
+            <span></span>
+            <li>(c) 2019 Swallowtail Tea</li>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
